Make sure a bar is always visible in period statistics

--- a/freq.css
+++ b/freq.css
@@ -215,6 +215,10 @@ button:not(.PrimaryButton) {
   border-bottom-right-radius: 5px;
 }
 
+#periodStats .Bar {
+  min-width: 0.35em;
+}
+
 #dataTextArea {
   background: none;
   border: none;
